# ChangeLog for games-fps/quake3-bfp
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-fps/quake3-bfp/ChangeLog,v 1.4 2008/02/15 01:00:12 wolf31o2 Exp $

  15 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  quake3-bfp-1.2-r1.ebuild:
  Shortening DESCRIPTION to shut repoman up.

  24 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  quake3-bfp-1.2-r1.ebuild:
  Updated to have both MOD_BINS and MOD_DIR like it used to do with the
  games-q3mod eclass so it'll install the wrapper with a different name.

*quake3-bfp-1.2-r1 (23 Oct 2006)

  23 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +quake3-bfp-1.2-r1.ebuild:
  Added new revision for testing which uses the brand-spankin-new
  games-mods.eclass to reduce ebuild code.

*quake3-bfp-1.2 (27 Dec 2004)

  27 Dec 2004; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Dirk-Jan Heijs #59642.