@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST bidforpower1-2.zip 129645741 RMD160 432a8bca8e7dbbf03b440513165dba5a6c13af8b SHA1 e6981cb81357da95c425ec6960d46daa516c84f7 SHA256 e8d5f4ec8453a7b0e0cd430e38ff5fb2cc37eb16c17f7e5eb6515429903b3a7b
-EBUILD quake3-bfp-1.2-r1.ebuild 627 RMD160 e54df952e2478f3b29ae2ec45bdb96dc840dbebf SHA1 683aa34e4a7ffe354f163c4d93857199b9a4338d SHA256 37b07366801164570c5d597541bac9927840c994fdb8c5abbc6f75fa483169c6
+EBUILD quake3-bfp-1.2-r1.ebuild 636 RMD160 4afbbfb19254c5633e4a342becc3c04a9d85b2d0 SHA1 37a7aa4e5e1be447d13fcabd6c858388529b5700 SHA256 07e1625b7abcfbf8e5f3e22a58f48a52e813844035a7a27d7b3ba9a3843f1d4d
 EBUILD quake3-bfp-1.2.ebuild 525 RMD160 7dc5f9c3c766547b045d6cc1c004d78d3fbb78e9 SHA1 51c476639b555f09c74a04c4beb1d2b97043d06c SHA256 d4696c942918d7de83d842e831c36b8489a4ab749c28fe3a429dff91e26e15b9
-MISC ChangeLog 943 RMD160 817ab4c4fc6e5cd6114b949ebcdb9abea72553f8 SHA1 00c68653a13adb043be6f3dbffadae5f5ade4021 SHA256 50427d7cd7c1e3f8656d2be30bb1039b1147b125e48294714394517e8dd570e8
+MISC ChangeLog 1037 RMD160 4b2c2d6530a0cb9c8babca9aba514ff9868b00b4 SHA1 9d57fcc5cc309fdb9925550e22a8bdd995bb82be SHA256 8dfaf1bfd0daf82c0d81cd2a352890fd076d8da221d969a325afd55e8ab22bee
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkrFHIkACgkQdz7hIScOURGRmwCgjWw+q9+XOka5lrg3yQJ2U/Hk
-50AAnA1vkGrPo1ZMMAYDpbnEx+zKyOPU
-=KCoM
+iEYEARECAAYFAkrLyO8ACgkQdz7hIScOUREdfQCg7oO+dnGk1lYQE/nYv3JRplqL
+LFoAn1Zy22V2s2zkHdJZ8w61JdlL3/39
+=gZLX
 -----END PGP SIGNATURE-----
