@@ -1,11 +1,13 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/quake3-bfp/quake3-bfp-1.2-r1.ebuild,v 1.4 2009/10/01 21:17:55 nyhm Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-fps/quake3-bfp/quake3-bfp-1.2-r1.ebuild,v 1.5 2009/10/06 22:47:01 nyhm Exp $
+
+EAPI=2
 
 MOD_DESC="take control of Ki-powered superheros and battle in a mostly aerial fight"
 MOD_NAME="Bid For Power"
 MOD_DIR="bfpq3"
-MOD_BINS="bfp"
+MOD_ICON="bfp.ico"
 
 inherit games games-mods
 
@@ -13,5 +15,5 @@ HOMEPAGE="http://www.planetquake.com/bidforpower/"
 SRC_URI="http://games.mirrors.tds.net/pub/planetquake3/modifications/bidforpower/bidforpower${PV/./-}.zip"
 
 LICENSE="freedist"
-KEYWORDS="-* ~amd64 ~ppc ~x86"
+KEYWORDS="~amd64 ~ppc ~x86"
 IUSE="dedicated opengl"
